syntax = "proto3";

package org.batfish.datamodel;

message DataPlane {
  string plugin_id = 1;
}

