syntax = "proto3";

package org.batfish.dataplane.ibdp;

import "org/batfish/dataplane/ibdp/Rib.proto";

message IncrementalDataPlane {
  repeated org.batfish.dataplane.ibdp.Rib main_ribs = 1;
}